2.2.7
-----


2.2.6
-----
(RB=439521)
Add feature to QueryTunnelUtil and fix a bug in encode of MimeMultiPart entity

(RB=436399)
Handle @PathKeysParam and other parameter annotation for action methods by
invoking the common routine ArgumentBuilder.buildArgs for all RestLiArgumentBuilder classes.

(RB=443980)
Add warning message for invocation of deprecated pegasus plugin method addIdlItem accepting two parameters.

2.2.5
-----
(RB=436213)
LoadBalancerStrategyName is deprecated and replaced by LoadBalancerStrategyList.
This patch gets rid of the StrategyName from the source.

(RB=420782)
Added tests for BatchCreateIdResponse
Added new mock factory and tests for BatchCreateIdResponse.

(RB=433868)
Return Http 400 error in case of key coercion error instead of Http 500.
Enhance existing RestLiRouter error testcases to always check return status.

(RB=439796)
Fix intermittent test failure in ZooKeeperChildrenDataPublisherTest.

(RB=438203)
Create option to turn off ClientCompressionFilter.

2.2.4
-----
(RB=430630)
Let Rest.li filters modify request headers.

2.2.3
-----
(RB=425777)
Change ByteString to have slice & copySlice methods
Add new copy method to copy from a sub array

(RB=417088)
Fix a bug in AsyncPoolImpl where it fails to cancel pending create requests when it has drained out all pool waiters.

2.2.2
-----
(RB=427189)
Fix illegal argument exception thrown when a cookie header is added.

2.2.1
-----
(RB=407665)
Migrate to HttpClient 4.3.

2.2.0
-----
(RB=418083)
Create separate internal storage data structure for Cookie and Set-Cookie HTTP header. Making header storage data structure case insensitive.

2.1.2
-----
(RB=406996)
Configuration support for Rest.li request compression.

2.1.1
-----
(RB=408836)
Add unbatch logic while extracts single resonpes from an auto-batched batch response.
Add field name to RestliRequestUriSignature.toString() result.

2.1.0
-----
(RB=342503)
Making rest.li requests read-only.

(RB=405110)
Product sorted snapshot files.
