@@ -1,6 +1,7 @@
 2.2.7
 -----
-
+(RB=446424)
+Allow selective response decompression for ClientCompressionFilter.
 
 2.2.6
 -----
